base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-apps
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: demo2-app
  namespace: demo-apps
spec:
  selector:
    app: demo2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
