base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-apps
  namespace: demo-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /demo/?(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 80
      - path: /demo2/?(.*)
        pathType: Prefix
        backend:
          service:
            name: demo2-app
            port:
              number: 80
